# cmake

./: CMakeLists.txt  README.md  arrow.cpp  aws.cpp  gbenchmark.cpp  gtest.cpp  json.cpp  main.cpp  mgcxx_text_search.cpp  nvidia_stdexec.cpp  vector_search.cpp  vs_annoy.cpp  vs_faiss.cpp  vs_usearch.cpp
libs-archive/: .gitignore  build.sh
modules/: boost.cmake  external-arrow.cmake  external-aws-sdk-cpp.cmake  external-boost.cmake  external-cxxtantivy.cmake  external-fmt.cmake  external-mgclient.cmake  external-mgcxx.cmake  fetch-annoy.cmake  fetch-aws-sdk-cpp.cmake  fetch-gbenchmark.cmake  fetch-gtest.cmake  fetch-nlohmann.cmake  fetch-nvidia-stdexec.cmake  fetch-usearch.cmake  fmt.cmake  gbenchmark.cmake  gtest.cmake  mgclient.cmake  wip-fetch-faiss.cmake
